fix: adjust padding in layout components for better alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
     @apply btn-bg;
   }
   .page_padding {
-    @apply pt-[8rem] pb-10 px-4 md:px-10 space-y-6 flex-1;
+    @apply pt-[7rem] pb-10 px-4 md:px-10 space-y-6 flex-1;
   }
   .bg_dark_white {
     @apply bg-white dark:bg-gray-900;
